fix bubles background on mobile

--- a/custom.css
+++ b/custom.css
@@ -52,7 +52,7 @@ body {
 }
 
 .slyyp-decoration-container {
-    position: absolute;
+    position: fixed;
     top: 0;
     right: 0;
     width: 50vw;
